<resources>
    <string name="app_name">Ecommerce</string>
    <string name="ecommerce_nconcept">Ecommerce \nConcept</string>
    <string name="explorer">Explorer</string>
    <string name="sale">Sale</string>
    <string name="favourite">Favourite</string>
    <string name="profile">Profile</string>
    <string name="zihuatanejo_gro">Zihuatanejo, Gro</string>
    <string name="select_category">Select Category</string>
    <string name="view_all">view all</string>
    <string name="phones">Phones</string>
    <string name="see_more">see more</string>
    <string name="hot_sales">Hot sales</string>
    <string name="new_">New</string>
    <string name="buy_now">Buy now!</string>
    <string name="best_seller">Best Seller</string>
    <string name="_1_500">$1,500</string>
    <string name="samsung_note_20_ultra">Samsung Note 20 Ultra</string>
    <string name="_1_047">$1,047</string>
    <string name="filter_options">Filter Options</string>
    <string name="done">Done</string>
    <string name="brand">Brand</string>
    <string name="size">Size</string>
    <string name="price">Price</string>
</resources>