<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/margin_standard"
    app:cardElevation="@dimen/margin_middle">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_product"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:src="@drawable/img_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_margin="@dimen/margin_large"
            app:cardCornerRadius="14dp"
            android:background="@color/bg_splash"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_price_without_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_standard"
            android:padding="@dimen/margin_standard"
            android:text="@string/_1_047"
            android:textColor="@color/bg_splash"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_product" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_discount_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_500"
            android:textColor="#CCCCCC"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_price_without_discount"
            app:layout_constraintStart_toEndOf="@id/tv_price_without_discount"
            app:layout_constraintTop_toTopOf="@id/tv_price_without_discount" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="32dp"
            android:text="@string/samsung_note_20_ultra"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@id/tv_price_without_discount"
            app:layout_constraintTop_toBottomOf="@id/tv_price_without_discount" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>