<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingTop="@dimen/margin_small"
    android:paddingBottom="24dp"
    tools:context=".BottomFilterSheet">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_standard"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_close"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/shape_square_blue"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mark_pro"
            android:text="@string/filter_options"
            android:textColor="@color/bg_splash"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_done"
            app:layout_constraintStart_toEndOf="@id/btn_close"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/color_yellow"
            android:text="@string/done"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/brand"
        android:textColor="@color/bg_splash"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_brand"
        style="@style/TextInputLayoutDropDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_middle"
        android:textColorHint="@color/white"
        app:hintEnabled="false">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/actv_brand"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:drawableTint="@color/color_yellow"
            android:hint="@string/brand"
            android:inputType="none"
            android:padding="@dimen/margin_standard"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            tools:ignore="UnusedAttribute" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/price"
        android:textColor="@color/bg_splash"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_price"
        style="@style/TextInputLayoutDropDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_middle"
        android:textColorHint="@color/white"
        app:hintEnabled="false">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/actv_price"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:drawableTint="@color/color_yellow"
            android:hint="@string/price"
            android:inputType="none"
            android:padding="@dimen/margin_standard"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            tools:ignore="UnusedAttribute" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/size"
        android:textColor="@color/bg_splash"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_size"
        style="@style/TextInputLayoutDropDown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_middle"
        android:textColorHint="@color/white"
        app:hintEnabled="false">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/actv_size"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:drawableTint="@color/color_yellow"
            android:hint="@string/size"
            android:inputType="none"
            android:padding="@dimen/margin_standard"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            tools:ignore="UnusedAttribute" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>